--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ span.k-label {
 /* Screen Two */
 
 .screen-two .winner-name-container {
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: flex-start;
 }
 
@@ -415,5 +415,5 @@ span.laps {
 }
 
 .last {
-  margin-top: 68px !important;
+  margin-top: 50px !important;
 }
